added sign up page

--- a/event-rsvp/src/app/globals.css
+++ b/event-rsvp/src/app/globals.css
@@ -47,6 +47,13 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+@theme inline {
+  --shadow-input:
+    0px 2px 3px -1px rgba(0, 0, 0, 0.1),
+    0px 1px 0px 0px rgba(25, 28, 33, 0.02),
+    0px 0px 0px 1px rgba(25, 28, 33, 0.08);
+}
+
 :root {
   --radius: 0.625rem;
   --card: oklch(1 0 0);
